--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_current_list">CurrentList</string>
+    <string-array name="categories_array">
+        <item>None</item>
+    </string-array>
 
 </resources>
